--- a/package.json
+++ b/package.json
@@ -24,21 +24,23 @@
         "build:preview": "nuxt preview",
         "build:static": "nuxt generate",
         "postinstall": "nuxt prepare",
-        "start": "nuxt dev -o",
+        "start": "nuxt dev -o --host",
         "tailwind": "nuxi dev -o & tailwind-config-viewer -o -p 3000"
     },
     "devDependencies": {
-        "@nuxtjs/supabase": "^1.0.2",
-        "@tailwindcss/forms": "^0.5.4",
-        "@types/node": "^20.5.2",
-        "autoprefixer": "^10.4.15",
-        "nuxt": "^3.6.5",
-        "postcss": "^8.4.28",
-        "prettier": "^3.0.2",
-        "prettier-plugin-tailwindcss": "^0.5.3",
-        "sass": "^1.66.1",
+        "@supabase/supabase-js": "^2.25.0",
+        "@tailwindcss/forms": "^0.5.3",
+        "@types/node": "^18",
+        "autoprefixer": "^10.4.14",
+        "nuxt": "^3.5.3",
+        "postcss": "^8.4.24",
+        "prettier": "^2.8.8",
+        "prettier-plugin-tailwindcss": "^0.3.0",
+        "sass": "^1.63.4",
+        "stylelint": "^15.10.3",
+        "stylelint-config-standard-scss": "^10.0.0",
         "tailwind-config-viewer": "^1.7.2",
-        "tailwindcss": "^3.3.3",
+        "tailwindcss": "^3.3.2",
         "vuex": "^4.1.0"
     },
     "engines": {
