--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
         "tailwind": "nuxi dev -o & tailwind-config-viewer -o -p 3000"
     },
     "devDependencies": {
+        "@nuxt/devtools": "^1.0.0-beta.0",
         "@supabase/supabase-js": "^2.25.0",
         "@tailwindcss/forms": "^0.5.3",
         "@types/node": "^18",
