--- a/package.json
+++ b/package.json
@@ -28,20 +28,19 @@
         "tailwind": "nuxi dev -o & tailwind-config-viewer -o -p 3000"
     },
     "devDependencies": {
-        "@nuxt/devtools": "^1.0.0-beta.0",
-        "@supabase/supabase-js": "^2.25.0",
-        "@tailwindcss/forms": "^0.5.3",
+        "@nuxt/devtools": "^1.0.2",
+        "@supabase/supabase-js": "^2.38.4",
         "@types/node": "^18",
-        "autoprefixer": "^10.4.14",
-        "nuxt": "^3.5.3",
-        "postcss": "^8.4.24",
-        "prettier": "^2.8.8",
-        "prettier-plugin-tailwindcss": "^0.3.0",
-        "sass": "^1.63.4",
-        "stylelint": "^15.10.3",
-        "stylelint-config-standard-scss": "^10.0.0",
-        "tailwind-config-viewer": "^1.7.2",
-        "tailwindcss": "^3.3.2",
+        "autoprefixer": "^10.4.16",
+        "nuxt": "^3.8.1",
+        "postcss": "^8.4.31",
+        "prettier": "^3.1.0",
+        "prettier-plugin-tailwindcss": "^0.5.7",
+        "sass": "^1.69.5",
+        "stylelint": "^15.11.0",
+        "stylelint-config-standard-scss": "^11.1.0",
+        "tailwind-config-viewer": "^1.7.3",
+        "tailwindcss": "^3.3.5",
         "vuex": "^4.1.0"
     },
     "engines": {
