--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,9 +1,8 @@
 {
     // Use Prettier to format files, on save.
-    "[css][html][javascript][json][scss][typescript][vue]": {
-        "editor.defaultFormatter": "esbenp.prettier-vscode",
-        "editor.formatOnSave": true
-    },
+    "editor.defaultFormatter": "esbenp.prettier-vscode",
+    "editor.formatOnSave": true,
     // Use Stylelint to lint SCSS files.
-    "stylelint.validate": ["scss"]
+    "stylelint.validate": ["scss"],
+    "scss.validate": false
 }
