--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
         "@types/node": "^20.9.0",
         "autoprefixer": "^10.4.16",
         "nuxt": "^3.8.1",
+        "nuxt-gtag": "^1.1.1",
         "postcss": "^8.4.31",
         "prettier": "^3.1.0",
         "prettier-plugin-tailwindcss": "^0.5.7",
